[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_agent"]

[project]
name = "rlm_agent"
version = "0.1.0"
description = "A general purpose connector to run LLMs in a RLM harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-dotenv>=1.2.2",
    "rlms",
    "typer",
    "uvicorn",
]

[project.scripts]
rlm-agent = "rlm_agent.cli_app:app"

# Submodules
[tool.uv.workspace]
members = ["rlm"]

[tool.uv.sources]
rlms = { workspace = true }
